@@ -7,31 +7,34 @@
  */
 package com.powsybl.openloadflow.dc;
 
+import com.google.common.collect.Lists;
 import com.powsybl.commons.report.ReportNode;
 import com.powsybl.loadflow.LoadFlowParameters;
 import com.powsybl.math.matrix.MatrixException;
+import com.powsybl.openloadflow.OpenLoadFlowParameters;
 import com.powsybl.openloadflow.dc.equations.DcEquationType;
 import com.powsybl.openloadflow.dc.equations.DcVariableType;
-import com.powsybl.openloadflow.equations.EquationSystem;
-import com.powsybl.openloadflow.equations.JacobianMatrix;
-import com.powsybl.openloadflow.equations.TargetVector;
-import com.powsybl.openloadflow.equations.Variable;
+import com.powsybl.openloadflow.equations.*;
 import com.powsybl.openloadflow.lf.LoadFlowEngine;
+import com.powsybl.openloadflow.lf.outerloop.OuterLoopResult;
 import com.powsybl.openloadflow.lf.outerloop.OuterLoopStatus;
 import com.powsybl.openloadflow.network.LfBus;
+import com.powsybl.openloadflow.network.LfGenerator;
 import com.powsybl.openloadflow.network.LfNetwork;
 import com.powsybl.openloadflow.network.LfNetworkLoader;
 import com.powsybl.openloadflow.network.util.ActivePowerDistribution;
 import com.powsybl.openloadflow.network.util.UniformValueVoltageInitializer;
 import com.powsybl.openloadflow.network.util.VoltageInitializer;
+import com.powsybl.openloadflow.util.PerUnit;
 import com.powsybl.openloadflow.util.Reports;
+import org.apache.commons.lang3.tuple.Pair;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -46,15 +49,27 @@ public class DcLoadFlowEngine implements LoadFlowEngine<DcVariableType, DcEquati
         this.context = Objects.requireNonNull(context);
     }
 
+    private static class RunningContext {
+
+        private boolean lastSolverSuccess;
+
+        private int solverTotalExecutions = 0;
+
+        private int outerLoopTotalIterations = 0;
+
+        private OuterLoopResult lastOuterLoopResult = OuterLoopResult.stable();
+    }
+
     @Override
     public DcLoadFlowContext getContext() {
         return context;
     }
 
-    public static void distributeSlack(Collection<LfBus> buses, LoadFlowParameters.BalanceType balanceType, boolean useActiveLimits) {
+    public static double distributeSlack(LfNetwork network, Collection<LfBus> buses, LoadFlowParameters.BalanceType balanceType, boolean useActiveLimits) {
         double mismatch = getActivePowerMismatch(buses);
         ActivePowerDistribution activePowerDistribution = ActivePowerDistribution.create(balanceType, false, useActiveLimits);
-        activePowerDistribution.run(buses, mismatch);
+        var result = activePowerDistribution.run(network.getReferenceGenerator(), buses, mismatch);
+        return mismatch - result.remainingMismatch();
     }
 
     public static double getActivePowerMismatch(Collection<LfBus> buses) {
@@ -110,38 +125,43 @@ public class DcLoadFlowEngine implements LoadFlowEngine<DcVariableType, DcEquati
         }
     }
 
-    private boolean runPhaseControlOuterLoop(DcIncrementalPhaseControlOuterLoop outerLoop, DcOuterLoopContext outerLoopContext) {
+    private void runOuterLoop(DcOuterLoop outerLoop, DcOuterLoopContext outerLoopContext, RunningContext runningContext) {
         ReportNode olReportNode = Reports.createOuterLoopReporter(outerLoopContext.getNetwork().getReportNode(), outerLoop.getName());
-        OuterLoopStatus outerLoopStatus;
+        OuterLoopResult outerLoopResult;
         int outerLoopIteration = 0;
-        boolean success = true;
 
         // re-run linear system solving until stabilization
         do {
             // check outer loop status
             outerLoopContext.setIteration(outerLoopIteration);
             outerLoopContext.setLoadFlowContext(context);
-            outerLoopStatus = outerLoop.check(outerLoopContext, olReportNode).status();
+            outerLoopContext.setOuterLoopTotalIterations(runningContext.outerLoopTotalIterations);
+            outerLoopResult = outerLoop.check(outerLoopContext, olReportNode);
+            runningContext.lastOuterLoopResult = outerLoopResult;
 
-            if (outerLoopStatus == OuterLoopStatus.UNSTABLE) {
-                LOGGER.debug("Start outer loop '{}' iteration {}", outerLoop.getName(), outerLoopStatus);
+            if (outerLoopResult.status() == OuterLoopStatus.UNSTABLE) {
+                LOGGER.debug("Start outer loop '{}' iteration {}", outerLoop.getName(), outerLoopIteration);
 
                 // if not yet stable, restart linear system solving
                 double[] targetVectorArray = context.getTargetVector().getArray().clone();
-                success = solve(targetVectorArray, context.getJacobianMatrix(), olReportNode);
+                runningContext.lastSolverSuccess = solve(targetVectorArray, context.getJacobianMatrix(), olReportNode);
+                runningContext.solverTotalExecutions++;
 
-                if (success) {
+                if (runningContext.lastSolverSuccess) {
                     context.getEquationSystem().getStateVector().set(targetVectorArray);
                     updateNetwork(outerLoopContext.getNetwork(), context.getEquationSystem(), targetVectorArray);
                 }
 
                 outerLoopIteration++;
+                runningContext.outerLoopTotalIterations++;
             }
-        } while (outerLoopStatus == OuterLoopStatus.UNSTABLE
-                && success
-                && outerLoopIteration < context.getParameters().getMaxOuterLoopIterations());
+        } while (outerLoopResult.status() == OuterLoopStatus.UNSTABLE
+                && runningContext.lastSolverSuccess
+                && runningContext.outerLoopTotalIterations < context.getParameters().getMaxOuterLoopIterations());
 
-        return success;
+        if (outerLoopResult.status() != OuterLoopStatus.STABLE) {
+            Reports.reportUnsuccessfulOuterLoop(olReportNode, outerLoopResult.status().name());
+        }
     }
 
     public static boolean solve(double[] targetVectorArray,
@@ -163,18 +183,66 @@ public class DcLoadFlowEngine implements LoadFlowEngine<DcVariableType, DcEquati
         EquationSystem<DcVariableType, DcEquationType> equationSystem = context.getEquationSystem();
         DcLoadFlowParameters parameters = context.getParameters();
         TargetVector<DcVariableType, DcEquationType> targetVector = context.getTargetVector();
+        RunningContext runningContext = new RunningContext();
 
         // outer loop initialization
-        DcIncrementalPhaseControlOuterLoop phaseShifterControlOuterLoop = new DcIncrementalPhaseControlOuterLoop();
-        DcOuterLoopContext outerLoopContext = new DcOuterLoopContext(network);
+        List<Pair<DcOuterLoop, DcOuterLoopContext>> outerLoopsAndContexts = new ArrayList<>();
+
         if (parameters.getNetworkParameters().isPhaseControl()) {
-            phaseShifterControlOuterLoop.initialize(outerLoopContext);
+            DcIncrementalPhaseControlOuterLoop phaseShifterControlOuterLoop = new DcIncrementalPhaseControlOuterLoop();
+            DcOuterLoopContext phaseShifterControlOuterLoopContext = new DcOuterLoopContext(network);
+            outerLoopsAndContexts.add(Pair.of(phaseShifterControlOuterLoop, phaseShifterControlOuterLoopContext));
+            phaseShifterControlOuterLoop.initialize(phaseShifterControlOuterLoopContext);
+        }
+
+        if (parameters.isAreaInterchangeControl() && network.hasArea()) {
+            ActivePowerDistribution activePowerDistribution = ActivePowerDistribution.create(parameters.getBalanceType(), false, parameters.getNetworkParameters().isUseActiveLimits());
+            DcAreaInterchangeControlControlOuterLoop areaInterchangeControlOuterLoop = new DcAreaInterchangeControlControlOuterLoop(activePowerDistribution, parameters.getSlackBusPMaxMismatch(), parameters.getAreaInterchangePMaxMismatch());
+            DcOuterLoopContext areaInterchangeControlOuterLoopContext = new DcOuterLoopContext(network);
+            outerLoopsAndContexts.add(Pair.of(areaInterchangeControlOuterLoop, areaInterchangeControlOuterLoopContext));
+            areaInterchangeControlOuterLoop.initialize(areaInterchangeControlOuterLoopContext);
         }
 
         initStateVector(network, equationSystem, new UniformValueVoltageInitializer());
 
-        if (parameters.isDistributedSlack()) {
-            distributeSlack(network.getBuses(), parameters.getBalanceType(), parameters.getNetworkParameters().isUseActiveLimits());
+        double initialSlackBusActivePowerMismatch = getActivePowerMismatch(network.getBuses());
+        double distributedActivePower = 0.0;
+        if (parameters.isDistributedSlack() || parameters.isAreaInterchangeControl()) {
+            LoadFlowParameters.BalanceType balanceType = parameters.getBalanceType();
+            boolean useActiveLimits = parameters.getNetworkParameters().isUseActiveLimits();
+            ActivePowerDistribution activePowerDistribution = ActivePowerDistribution.create(balanceType, false, useActiveLimits);
+            var result = activePowerDistribution.run(network, initialSlackBusActivePowerMismatch);
+            final LfGenerator referenceGenerator;
+            final OpenLoadFlowParameters.SlackDistributionFailureBehavior behavior;
+            if (parameters.isAreaInterchangeControl()) {
+                // actual behavior will be handled by the outerloop itself, just leave on slack bus here
+                behavior = OpenLoadFlowParameters.SlackDistributionFailureBehavior.LEAVE_ON_SLACK_BUS;
+                referenceGenerator = null;
+            } else {
+                behavior = parameters.getSlackDistributionFailureBehavior();
+                referenceGenerator = context.getNetwork().getReferenceGenerator();
+            }
+            ActivePowerDistribution.ResultWithFailureBehaviorHandling resultWbh = ActivePowerDistribution.handleDistributionFailureBehavior(
+                    behavior,
+                    referenceGenerator,
+                    initialSlackBusActivePowerMismatch,
+                    result,
+                    "Failed to distribute slack bus active power mismatch, %.2f MW remains"
+            );
+            double remainingMismatch = resultWbh.remainingMismatch();
+            distributedActivePower = initialSlackBusActivePowerMismatch - remainingMismatch;
+            if (Math.abs(remainingMismatch) > ActivePowerDistribution.P_RESIDUE_EPS) {
+                Reports.reportMismatchDistributionFailure(reportNode, remainingMismatch * PerUnit.SB);
+            } else {
+                ActivePowerDistribution.reportAndLogSuccess(reportNode, initialSlackBusActivePowerMismatch, resultWbh);
+            }
+            if (resultWbh.failed()) {
+                distributedActivePower -= resultWbh.failedDistributedActivePower();
+                runningContext.lastSolverSuccess = false;
+                runningContext.lastOuterLoopResult = new OuterLoopResult("DistributedSlack", OuterLoopStatus.FAILED, resultWbh.failedMessage());
+                Reports.reportDcLfComplete(reportNode, runningContext.lastSolverSuccess, runningContext.lastOuterLoopResult.status().name());
+                return buildDcLoadFlowResult(network, runningContext, initialSlackBusActivePowerMismatch, distributedActivePower);
+            }
         }
 
         // we need to copy the target array because JacobianMatrix.solveTransposed take as an input the second member
@@ -183,14 +251,43 @@ public class DcLoadFlowEngine implements LoadFlowEngine<DcVariableType, DcEquati
         var targetVectorArray = targetVector.getArray().clone();
 
         // First linear system solution
-        boolean success = solve(targetVectorArray, context.getJacobianMatrix(), reportNode);
-
+        runningContext.lastSolverSuccess = solve(targetVectorArray, context.getJacobianMatrix(), reportNode);
         equationSystem.getStateVector().set(targetVectorArray);
         updateNetwork(network, equationSystem, targetVectorArray);
 
-        // continue with PST active power control outer loop only if first linear system solution has succeeded
-        if (success && parameters.getNetworkParameters().isPhaseControl()) {
-            success = runPhaseControlOuterLoop(phaseShifterControlOuterLoop, outerLoopContext);
+        // continue with outer loops only if solver succeed
+        if (runningContext.lastSolverSuccess) {
+            int oldSolverTotalExecutions;
+            do {
+                oldSolverTotalExecutions = runningContext.solverTotalExecutions;
+                // outer loops are nested: innermost loop first in the list, outermost loop last
+                for (var outerLoopAndContext : outerLoopsAndContexts) {
+                    runOuterLoop(outerLoopAndContext.getLeft(), outerLoopAndContext.getRight(), runningContext);
+
+                    // continue with next outer loop only if:
+                    // - last solver run succeed,
+                    // - last OuterLoopStatus is not FAILED
+                    // - we have not reached max number of outer loop iteration
+                    if (!runningContext.lastSolverSuccess
+                            || runningContext.lastOuterLoopResult.status() == OuterLoopStatus.FAILED
+                            || runningContext.outerLoopTotalIterations >= context.getParameters().getMaxOuterLoopIterations()) {
+                        break;
+                    }
+                }
+            } while (runningContext.solverTotalExecutions > oldSolverTotalExecutions
+                    && runningContext.lastSolverSuccess
+                    && runningContext.lastOuterLoopResult.status() != OuterLoopStatus.FAILED
+                    && runningContext.outerLoopTotalIterations < context.getParameters().getMaxOuterLoopIterations());
+        }
+
+        // outer loops finalization (in reverse order to allow correct cleanup)
+        for (var outerLoopAndContext : Lists.reverse(outerLoopsAndContexts)) {
+            var outerLoop = outerLoopAndContext.getLeft();
+            var outerLoopContext = outerLoopAndContext.getRight();
+            if (outerLoop instanceof DcAreaInterchangeControlControlOuterLoop activePowerDistributionOuterLoop) {
+                distributedActivePower += activePowerDistributionOuterLoop.getDistributedActivePower(outerLoopContext);
+            }
+            outerLoop.cleanup(outerLoopContext);
         }
 
         // set all calculated voltages to NaN
@@ -200,10 +297,24 @@ public class DcLoadFlowEngine implements LoadFlowEngine<DcVariableType, DcEquati
             }
         }
 
-        Reports.reportDcLfComplete(reportNode, success);
-        LOGGER.info("DC load flow completed (success={})", success);
+        Reports.reportDcLfComplete(reportNode, runningContext.lastSolverSuccess, runningContext.lastOuterLoopResult.status().name());
 
-        return new DcLoadFlowResult(context.getNetwork(), getActivePowerMismatch(context.getNetwork().getBuses()), success);
+        return buildDcLoadFlowResult(network, runningContext, initialSlackBusActivePowerMismatch, distributedActivePower);
+    }
+
+    DcLoadFlowResult buildDcLoadFlowResult(LfNetwork network, RunningContext runningContext, double initialSlackBusActivePowerMismatch, double finalDistributedActivePower) {
+        double slackBusActivePowerMismatch;
+        double distributedActivePower;
+        if (runningContext.lastSolverSuccess && runningContext.lastOuterLoopResult.status() == OuterLoopStatus.STABLE) {
+            slackBusActivePowerMismatch = getActivePowerMismatch(network.getBuses());
+            distributedActivePower = finalDistributedActivePower;
+        } else {
+            slackBusActivePowerMismatch = initialSlackBusActivePowerMismatch;
+            distributedActivePower = 0.0;
+        }
+        DcLoadFlowResult result = new DcLoadFlowResult(network, runningContext.outerLoopTotalIterations, runningContext.lastSolverSuccess, runningContext.lastOuterLoopResult, slackBusActivePowerMismatch, distributedActivePower);
+        LOGGER.info("DC loadflow complete on network {} (result={})", context.getNetwork(), result);
+        return result;
     }
 
     public static <T> List<DcLoadFlowResult> run(T network, LfNetworkLoader<T> networkLoader, DcLoadFlowParameters parameters, ReportNode reportNode) {
@@ -217,8 +328,9 @@ public class DcLoadFlowEngine implements LoadFlowEngine<DcVariableType, DcEquati
                         }
                     }
 
-                    return new DcLoadFlowResult(n, getActivePowerMismatch(n.getBuses()), false);
+                    return DcLoadFlowResult.createNoCalculationResult(n);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
+
 }
